--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ django-rest-passwordreset==1.4.1
 django-widget-tweaks==1.5.0
 djangorestframework==3.15.1
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
 idna==3.10
+packaging==24.2
 pillow==10.4.0
 psycopg2==2.9.10
 psycopg2-binary==2.9.9
